--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="../estilos/estilos.css">
-  <link rel="icon" type="image/png" href="../static/img/favicon.png">
+  <link rel="icon" type="image/png" href="../img/favicon.png">
   <title>simple.pass</title>
 </head>
 
@@ -68,7 +68,7 @@
     <!--card inicio-->
     <article class="card-evento">
       <a href="./detalle_evento.html">
-        <img src="../img/Rectangle 20.png" alt=""><br></a>
+        <img src="/img/Rectangle 20.png" alt=""><br></a>
       <div class="event-title">
         <h5>Carnavales Hasenkamp</h5>
       </div>
@@ -90,7 +90,7 @@
             <!--card inicio-->
     <article class="card-evento">
       <a href="./detalle_evento.html">
-        <img src="../img/Rectangle 20.png" alt=""><br></a>
+        <img src="/img/Rectangle 20.png" alt=""><br></a>
       <div class="event-title">
         <h5>Carnavales Hasenkamp</h5>
       </div>
