--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,10 +31,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="https://simplepaaas.000webhostapp.com/simplepass/src/main/resources/static/loginSimple.html">Iniciar sesion</a>
+              <a class="nav-link active" aria-current="page" href="/loginSimple.html">Iniciar sesion</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://simplepaaas.000webhostapp.com/simplepass/src/main/resources/static/signup.html">Crear cuenta</a>
+              <a class="nav-link" href="/signup.html">Crear cuenta</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
