--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,8 +10,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://simplepaaas.000webhostapp.com/simplepass/src/main/resources/static/styles/styles.css">
-  <link rel="icon" type="image/png" href="https://simplepaaas.000webhostapp.com/simplepass/src/main/resources/static/img/favicon.png">
+  <link rel="stylesheet" href="/static/styles/styles.css">
+  <link rel="icon" type="image/png" href="/static/img/favicon.png">
   <title>simple.pass</title>
 </head>
 
@@ -34,7 +34,7 @@
               <a class="nav-link active" aria-current="page" href="/loginSimple.html">Iniciar sesion</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/signup.html">Crear cuenta</a>
+              <a class="nav-link" href="/login/signup.html">Crear cuenta</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -42,12 +42,12 @@
                 Ver más
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="https://simplepaaas.000webhostapp.com/simplepass/src/main/resources/static/help.html">Centro de Ayuda</a></li>
+                <li><a class="dropdown-item" href="/help.html">Centro de Ayuda</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="https://simplepaaas.000webhostapp.com/simplepass/src/main/resources/static/nosotros.html">Nosotros</a></li>
+                <li><a class="dropdown-item" href="/aboutus/nosotros.html">Nosotros</a></li>
               </ul>
             </li>
           </ul>
@@ -91,7 +91,7 @@
 
     <!--card inicio-->
     <article class="card-evento">
-      <a href="https://simplepaaas.000webhostapp.com/simplepass/src/main/resources/static/detalle_evento.html">
+      <a href="/event/detalle_evento.html">
         <img src="https://simplepaaas.000webhostapp.com/simplepass/src/main/resources/static/img/Rectangle 20.png" alt=""><br></a>
       <div class="event-title">
         <h5>Carnavales Hasenkamp</h5>
@@ -127,7 +127,7 @@
         <p><b>Centro Cultural Borges.</b>
       </div>
       <div class="event-buy">
-        <i class="fa-solid fa-ticket"></i> <a href="https://simplepaaas.000webhostapp.com/simplepass/src/main/resources/static/detalle_evento.html">Comprar Tickets</a>
+        <i class="fa-solid fa-ticket"></i> <a href="/event/detalle_evento.html">Comprar Tickets</a>
       </div>
       </div>
     </article>
@@ -152,7 +152,7 @@
         <li> <a href="#">FAQ</a></li>
         <li> <a href="#">Centro de Ayuda</a></li>
         <li> <a href="#">Mi Cuenta</a></li>
-        <li> <a href="/crearEvento.html">Creá tu evento</a></li>
+        <li> <a href="/event/crearEvento.html">Creá tu evento</a></li>
       </ul>
     </article>
     <article>
