--- a/src/main/resources/static/pages/aboutus/nosotros.html
+++ b/src/main/resources/static/pages/aboutus/nosotros.html
@@ -10,7 +10,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://simplepaaas.000webhostapp.com/simplepass/src/main/resources/static/styles/styles.css">
+  <link rel="stylesheet" href="/static/estilos/styles.css">
   <link rel="icon" type="image/png" href="https://simplepaaas.000webhostapp.com/simplepass/src/main/resources/static/img/favicon.png">
   <title>simple.pass</title>
 </head>
